# caritas-cda-service

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: dagster-deploy.yml  dbt-ci.yml  terraform.yml
clients/_template/config/: dev.yml
clients/acme/config/: dev.yml
dagster/: dagster_cloud.yaml  pyproject.toml
dagster/caritas_cda/: __init__.py  definitions.py
dagster/caritas_cda/assets/: __init__.py  bronze.py  census_assets.py  dbt_assets.py
dagster/caritas_cda/resources/: __init__.py
data/: harvest_clients.jsonl  harvest_projects.jsonl  harvest_time_entries.jsonl  intacct_customers.jsonl  intacct_gl_entries.jsonl  intacct_revenue_recognition.jsonl  jira_issues.jsonl  mixpanel_events.jsonl  sf_accounts.jsonl  sf_opportunities.jsonl  sf_users.jsonl  stripe_balance_transactions.jsonl  stripe_charges.jsonl  stripe_customers.jsonl  stripe_disputes.jsonl  stripe_invoice_line_items.jsonl  stripe_invoices.jsonl  stripe_refunds.jsonl  stripe_subscriptions.jsonl  zendesk_organizations.jsonl  zendesk_ticket_events.jsonl  zendesk_tickets.jsonl  zendesk_time_entries.jsonl
dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: generate_schema_name.sql  query_tags.sql
dbt/models/marts/: schema.yml
dbt/models/staging/: _sources.yml  (+25 more)
dbt/seeds/: customer_identity_map.csv
docs/architecture/: overview.md
docs/runbooks/: onboard_new_client.md
scripts/: backfill_history.sql  dbt-run.ps1  load-env.ps1  onboard_client.sh  upload_to_s3.py
terraform/: STORAGE_INTEGRATION_SETUP.md
(+12 files in other folders)
