[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "caritas-cda"
version = "0.1.0"
description = "Dagster orchestration for Customer Data Activation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Caritas Team", email = "tech@caritas.com"},
]

dependencies = [
    "dagster>=1.6.0",
    "dagster-cloud>=1.6.0",
    "dagster-snowflake>=0.22.0",
    "dagster-aws>=0.22.0",
    "dagster-dbt>=0.22.0",
    "dbt-core>=1.7.0",
    "dbt-snowflake>=1.7.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["caritas_cda"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
